sqlite added, basic functionailty in saving recipes, their ingridients and creating a meal plan

--- a/myapp.kv
+++ b/myapp.kv
@@ -1,7 +1,7 @@
 BoxLayout:
     orientation: 'vertical'
-    padding: 10
-    spacing: 10
+    padding: 13
+    spacing: 20
 
     Label:
         id: my_label
@@ -10,3 +10,7 @@ BoxLayout:
     Button:
         text: 'Klick mich!'
         on_press: app.on_button_click()
+    
+    Button:
+        text: 'du nervst!'
+        id: nerviger_button
